- Revamped the default style of the example sites [both single language and multilingual] - Merged struct.css into style.css: use only one stylesheet anymore - Fleshed out the default content a bit - Some other fixes [mostly to the pagetemplate.php's]
--HG--
extra : convert_revision : svn%3Ac6461f93-7114-0410-893d-dbe9e6e34e10/trunk%4039

--- a/example_multilingual/site/en/pages/main_welcome.html
+++ b/example_multilingual/site/en/pages/main_welcome.html
@@ -4,6 +4,7 @@
 
 <h2>Updates</h2>
 
-@@@news=home:1:3@@@
+<p>Last four random highlights:</p>
+@@@news=home:1:4@@@
 <p>[<a href="page/main/news/">old news</a>]</p>
 
