--- a/example_site/site/pages/main_welcome.html
+++ b/example_site/site/pages/main_welcome.html
@@ -4,6 +4,7 @@
 
 <h2>Updates</h2>
 
-@@@news=home:1:3@@@
+<p>Last four random highlights:</p>
+@@@news=home:1:4@@@
 <p>[<a href="page/main/news/">old news</a>]</p>
 
